--- a/index.html
+++ b/index.html
@@ -4,22 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/index.css">
     
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.min.css" rel="stylesheet">
-
-    <script src="/scripts/header-script.js"></script>
-    <script src="/scripts/animation-writting.js"></script>
-    <script src="/scripts/animation-counter.js"></script>
-    <script src="/scripts/carrousel-script.js"></script>
-    <script src="/scripts/skills.js"></script>
-    <script src="/scripts/download-script.js"></script>
-    <script src="/scripts/send-email.js"></script>
-    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
     <!-- Precargar imagenes -->
     <link rel="preload" as="image" type="image/webp" href="assets/image/cristian.webp">
     <link rel="preload" as="image" type="image/webp" href="assets/image/developer2.webp">
@@ -30,6 +15,19 @@
     <link rel="preload" as="image" type="image/webp" href="assets/skills/node.webp">
     <link rel="preload" as="image" type="image/webp" href="assets/skills/react.webp">
     <link rel="preload" as="image" type="image/webp" href="assets/skills/wordpress.webp">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+    <script src="scripts/header-script.js"></script>
+    <script src="scripts/animation-writting.js"></script>
+    <script src="scripts/animation-counter.js"></script>
+    <script src="scripts/carrousel-script.js"></script>
+    <script src="scripts/skills.js"></script>
+    <script src="scripts/download-script.js"></script>
+    <script src="scripts/send-email.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <title>Cristian Lozano</title>
 </head>
