change page section

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <img src="assets/image/developer2.webp" alt="programming">
             <div class="cl_aboutme-card-info">
                 <h2>Cristian Lozano</h2>
-                <p>Semi Senior Desarrollador Web</p>
+                <p>Frontend Developer</p>
                 <hr />
                 <div class="cl_aboutme-card-info-buttons">
                     <button class="cl_mainButton"><a href="#cl_contact">Contactar</a></button>
@@ -142,7 +142,7 @@
 
     </section>
 
-    <!-- Services -->
+    <!-- Services
     <section id="cl_services">
         <h3 class="cl_sectionTitle">Mis servicios</h3>
         <div class="cl_services-container swiper">
@@ -212,7 +212,7 @@
 
 
 
-    </section>
+    </section> -->
 
     <!-- Skills -->
     <section id="cl_skills">
@@ -223,37 +223,37 @@
         <div class="cl_bgbox4 cl_geometry"></div>
         <h3 class="cl_sectionTitle">Habilidades</h3>
         <div class="cl_skills-grid">
-            <div class="cl_skills-circularProgress" data-value="88">
+            <div class="cl_skills-circularProgress" data-value="90">
                 <img src="assets/skills/css.webp" alt="CSS skill">
-                <div class="cl_skills-circularProgress-value">88 %</div>
+                <!-- <div class="cl_skills-circularProgress-value">90 %</div> -->
             </div>
 
             <div class="cl_skills-circularProgress cl_skills-circularProgress-flutter" data-value="50">
                 <img src="assets/skills/flutter.webp" alt="Flutter skill">
-                <div class="cl_skills-circularProgress-value">50 %</div>
+                <!-- <div class="cl_skills-circularProgress-value">50 %</div> -->
             </div>
 
             <div class="cl_skills-circularProgress cl_skills-circularProgress-html" data-value="90">
                 <img src="assets/skills/html.webp" alt="HTML skill">
-                <div class="cl_skills-circularProgress-value">90 %</div>
+                <!-- <div class="cl_skills-circularProgress-value">90 %</div> -->
             </div>
 
             <div class="cl_skills-circularProgress cl_skills-circularProgress-js" data-value="75">
                 <img src="assets/skills/js.webp" alt="js skill">
-                <div class="cl_skills-circularProgress-value">75 %</div>
+                <!-- <div class="cl_skills-circularProgress-value">75 %</div> -->
             </div>
 
-            <div class="cl_skills-circularProgress cl_skills-circularProgress-node" data-value="62">
+            <div class="cl_skills-circularProgress cl_skills-circularProgress-node" data-value="50">
                 <img src="assets/skills/node.webp" alt="Node skill">
-                <div class="cl_skills-circularProgress-value">62 %</div>
+                <!-- <div class="cl_skills-circularProgress-value">50 %</div> -->
             </div>
-            <div class="cl_skills-circularProgress cl_skills-circularProgress-react" data-value="88">
+            <div class="cl_skills-circularProgress cl_skills-circularProgress-react" data-value="75">
                 <img src="assets/skills/react.webp" alt="React skill">
-                <div class="cl_skills-circularProgress-value">88 %</div>
+                <!-- <div class="cl_skills-circularProgress-value">75 %</div> -->
             </div>
             <div class="cl_skills-circularProgress cl_skills-circularProgress-react" data-value="40">
                 <img src="assets/skills/wordpress.webp" alt="Wordpress skill">
-                <div class="cl_skills-circularProgress-value">40 %</div>
+                <!-- <div class="cl_skills-circularProgress-value">40 %</div> -->
             </div>
         </div>
     </section>
