--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <script src="scripts/header-script.js"></script>
     <script src="scripts/animation-writting.js"></script>
     <script src="scripts/animation-counter.js"></script>
-    <script src="scripts/carrousel-script.js"></script>
+    <!-- <script src="scripts/carrousel-script.js"></script> -->
     <script src="scripts/skills.js"></script>
-    <script src="scripts/download-script.js"></script>
+    <!-- <script src="scripts/download-script.js"></script> -->
     <script src="scripts/send-email.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
@@ -41,11 +41,11 @@
         <nav>
             <ul>
                 <li><a data-scroll="cl_aboutme" href="#cl_aboutme">Sobre Mi</a></li>
-                <li><a data-scroll="cl_services" href="#cl_services">Servicios</a></li>
+                <!-- <li><a data-scroll="cl_services" href="#cl_services">Servicios</a></li> -->
                 <li><a data-scroll="cl_skills" href="#cl_skills">Habilidades</a></li>
                 <li><a data-scroll="cl_portfolio" href="#cl_portfolio">Portafolio</a></li>
                 <li><a data-scroll="cl_testimonials" href="#cl_testimonials">Testimonios</a></li>
-                <li><a data-scroll="cl_contact" href="#cl_contact">Contacto</a></li>
+                <!-- <li><a data-scroll="cl_contact" href="#cl_contact">Contacto</a></li> -->
             </ul>
         </nav>
     </header>
@@ -112,7 +112,7 @@
         </div>
     </section>
 
-    <!-- Sección Aceer de mi-->
+    <!-- Sección Acerca de mi-->
     <section id="cl_aboutme">
         <div class="cl_bgbox1 cl_geometry"></div>
         <div class="cl_bgbox4 cl_geometry"></div>
@@ -134,8 +134,8 @@
                 <p>Frontend Developer</p>
                 <hr />
                 <div class="cl_aboutme-card-info-buttons">
-                    <button class="cl_mainButton"><a href="#cl_contact">Contactar</a></button>
-                    <button id="cl_downloadcv" class="cl_secondButton">Descargar CV</button>
+                    <button class="cl_mainButton"><a href="https://wa.me/+593988568112" target="_blank">Contactar</a></button>
+                    <!-- <button id="cl_downloadcv" class="cl_secondButton">Descargar CV</button> -->
                 </div>
             </div>
         </div>
@@ -266,8 +266,7 @@
         <div class="cl_portfolio-container">
             <div class="cl_portfolio-container-description">
                 <h3 class="cl_sectionTitle">Mis proyectos</h3>
-                <p>Descubre mi portafolio de proyectos digitales que abarcan algunas aplicaciones web y aplicaciones
-                    móviles. Explora cómo he ayudado a otros a alcanzar sus objetivos digitales y cómo puedo hacer lo
+                <p>Descubre mi portafolio de proyectos que abarcan solo algunas aplicaciones web y aplicaciones móviles las cuales he desarrollado con diferentes tecnologías. Explora cómo he ayudado a otros a alcanzar sus objetivos digitales y cómo puedo hacer lo
                     mismo por ti.</p>
             </div>
             <div class="cl_portfolio-projects">
@@ -498,7 +497,7 @@
         </div>
     </section>
     <!-- Contact -->
-    <section id="cl_contact">
+    <!-- <section id="cl_contact">
         <div class="cl_bgbox1 cl_geometry"></div>
         <div class="cl_bgbox6 cl_geometry"></div>
         <h3 class="cl_sectionTitle">Contacto</h3>
@@ -534,7 +533,7 @@
                 <button onclick="senEmail()">Enviar</button>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Footer -->
     <footer>
         <div>
@@ -542,7 +541,7 @@
                 <img src="assets/logo/logo-completo-white.png" alt="Cristian Lozano">
             </div>
             <div class="cl_footer-reserved">
-                <p>Copywriting &copy; 2023. All rigth reserved</p>
+                <p>Copywriting &copy; 2024. All rigth reserved</p>
             </div>
         </div>
         <div class="cl_footer-socials">
